frontend/templates/staticfiles/css/cores.css
body{
    background:#343a40;
}

footer{
    background: #343a40;
}
.white-texto{
    color:white ! important;
}
html {
    scrollbar-width: normal;
    scrollbar-color: #b3b3b3 #555;
  }

  html::-webkit-scrollbar {
    width: 15px;
  }

  html::-webkit-scrollbar-thumb {
    background-color: #b3b3b3;
  }

  html::-webkit-scrollbar-thumb:hover {
    background-color: #b3b3b3;
  }

  html::-webkit-scrollbar-track {
    background-color: #5555;
  }

  html::-webkit-scrollbar-track:hover {
    background-color: #555;
  }

